--- a/contact.html
+++ b/contact.html
@@ -10,5 +10,8 @@
    <h1>name</h1>
    <h1>address</h1>
    <h1>phone number</h1> 
+   <h1>name</h1>
+   <h1>address</h1>
+   <h1>phone number</h1> 
 </body>
 </html>
